[package]
name = "rxpipes"
description = "2D version of the ancient pipes screensaver for terminals"
authors = ["inunix3 <inu.nix3@gmail.com>"]
keywords = ["screensaver", "tui", "pipes", "terminal", "termwiz"]
categories = ["command-line-utilities"]
license = "MIT"
version = "1.2.0"
readme = "README.md"
repository = "https://github.com/inunix3/rxpipes"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
compact_str = "0.8.0"
eyre = "0.6.12"
hex_color = "3.0.0"
rand = "0.8.5"
termwiz = "0.22.0"
unicode-segmentation = "1.11.0"

[features]
default = ["alternate-screen"]
alternate-screen = []
